--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-Flask==1.1.1
-Jinja2==2.10.1
+Flask==1.1.2
+Jinja2==2.11.2
 gunicorn==19.9.0
 certifi==2019.11.28
 itsdangerous==1.1.0
 numpy
+scikit-learn
+pandas
